src/objects/SPH_Company__c.object
<CustomObject>
    <fields>
        <fullName>Company_Code__c</fullName>
        <externalId>true</externalId>
        <label>Company Code</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_By__c</fullName>
        <label>Legacy Created By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_Date__c</fullName>
        <label>Legacy Created Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Updated_By__c</fullName>
        <label>Legacy Updated By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Updated_Date__c</fullName>
        <label>Legacy Updated Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPH_Email_Account__c</fullName>
        <label>SPH Email Account</label>
        <type>Email</type>
    </fields>
    <label>SPH Company</label>
    <nameField>
        <label>SPH Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SPH Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>